# argosir

./: Makefile  README.rst  argosir  argosir.yaml  main.py  mopidyir  mopidyir.yaml  pyproject.toml  setup-ir.sh
rc_keymaps/: smsl_a8  smsl_a8.toml
services/: ir-event-listening.service  setup-ir.service
