[tool.poetry]
name = "mopidyir"
version = "0.1.0"
description = "Mopidy callbacks to IR events"
authors = ["Matthias Meulien <orontee@gmail.com>"]
license = "GPL-3.0"
package-mode = false

[tool.poetry.dependencies]
python = "~3.11"
evdev = "~1.9"
aiohttp = "~3.11"
pyyaml = "^6.0.2"

[tool.poetry.group.dev.dependencies]
pycodestyle = "~2.12"
mypy = "~1.15"
black = "~23.12"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
